--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple_ecommence",
   "version": "1.0.0",
   "description": "This is a simple e-commence website developed using html, css, javascript, and node.js",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
