--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a simple e-commence website developed using html, css, javascript, and node.js",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
